Desktop 1440px done Still need media query, 4k screen CSS, & Mobile CSS

--- a/index.html
+++ b/index.html
@@ -1,29 +1,39 @@
+<!--بسم الله الرحمن الرحيم -->
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Victor's profile card</title>
-  <link rel="icon" type="image/png" href="favicon\favicon-32x32.png">
-  <link rel="stylesheet" href="styles\styles.css">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
-</head>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Victor's profile card</title>
+    <link rel="icon" type="image/png" href="favicon\favicon-32x32.png">
+    <link rel="stylesheet" href="styles\styles.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
+  </head>
 
-<body>
-  <img id="bg-bottom" src="images\bg-pattern-bottom.svg">
-  <img id="bg-top" src="images\bg-pattern-top.svg">
-  <div id="card">
-    <section id="upcard">
-      <img id="bubbles" src="images\bg-pattern-card.svg">
-    </section>
-    <section id="downcard">
-      <img id="Victor" src="images\image-victor.jpg" alt="Victor's picture">
-      <p>Victor Crest <span>26</span></p>
-      <p><span class="smaller">London</span></p>
-    </section>
-  </div>
-</body>
+  <body>
+    <img id="bg-bottom" src="images\bg-pattern-bottom.svg">
+    <img id="bg-top" src="images\bg-pattern-top.svg">
+    <div id="card">
+      <section>
+        <img id="bubbles" src="images\bg-pattern-card.svg">
+        <img id="Victor" src="images\image-victor.jpg" alt="Victor's picture">
+        <p class="dark post">Victor Crest <span class="light">26</span><br><span class="smaller light">London</span></p>
+      </section>
+      <hr>
+      <section class="disposition">
+        <p class="dark">80K<br>
+          <span class="smaller light">Followers</span>
+        </p>
+        <p class="dark">803K<br>
+          <span class="smaller light">Likes</span>
+        </p>
+        <p class="dark">1.4K<br>
+          <span class="smaller light">photos</span>
+        </p>
+      </section>
+    </div>
+  </body>
 
 </html>
